--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "weave",
+  "name": "shwoop",
   "version": "1.0.0",
   "description": "",
   "main": "./lib/bin/www",
   "scripts": {
-    "start": "set NODE_ENV=production&&tsc&&concurrently --kill-others \"tsc -w\" \"nodemon ./lib/bin/www\"",
+    "start": "set NODE_ENV=production&&tsc&&node lib/bin/www",
     "dev": "set NODE_ENV=development&&tsc&& concurrently --kill-others \"tsc -w\" \"nodemon ./lib/bin/www\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Muhammad Salahuddin",
+  "author": "Ahmed Baig",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.22.0",
     "@sendgrid/mail": "^7.4.2",
     "@types/moment": "^2.13.0",
+    "@types/passport-google-oauth2": "^0.1.3",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
-    "busboy-body-parser": "^0.3.2",
     "cli-spinner": "^0.2.10",
     "cloudinary": "^1.25.0",
     "composable-middleware": "^0.3.0",
@@ -25,8 +26,9 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "extends-classes": "^1.0.5",
     "fs": "^0.0.1-security",
     "google-auth-library": "^7.0.2",
@@ -39,13 +41,21 @@
     "mongoose-types": "^1.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "node-redis-scan": "^1.3.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
-    "redis": "^3.0.2"
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "redis": "^3.0.2",
+    "short-uuid": "^4.1.0",
+    "twilio": "^3.61.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/express": "4.16.1",
+    "prisma": "^2.22.0",
     "tslint": "5.12.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.2.4"
   }
 }
