--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shwoop",
+  "name": "iweave",
   "version": "1.0.0",
   "description": "",
   "main": "./lib/bin/www",
@@ -29,6 +29,8 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
     "extends-classes": "^1.0.5",
     "fs": "^0.0.1-security",
@@ -51,6 +53,7 @@
     "redis": "^3.0.2",
     "short-uuid": "^4.1.0",
     "twilio": "^3.61.0",
+    "winston": "^3.3.3",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
