--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "busboy-body-parser": "^0.3.2",
     "cli-spinner": "^0.2.10",
     "cloudinary": "^1.25.0",
     "composable-middleware": "^0.3.0",
