--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "short-uuid": "^4.1.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
+    "socketio-jwt": "^4.6.2",
     "tsc-watch": "^4.4.0",
     "twilio": "^3.61.0",
     "yarn": "^1.22.10"
