--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.22.0",
-    "@sendgrid/mail": "^7.4.2",
     "@types/moment": "^2.13.0",
     "@types/passport-google-oauth2": "^0.1.3",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "busboy-body-parser": "^0.3.2",
-    "cli-spinner": "^0.2.10",
     "cloudinary": "^1.25.0",
     "composable-middleware": "^0.3.0",
     "concurrently": "^5.3.0",
@@ -52,6 +50,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "random-location": "^1.1.3",
     "rate-limit-redis": "^2.1.0",
     "redis": "^3.0.2",
     "request": "^2.88.2",
