Doc update + message service + Kafka service

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "http": "^0.0.1-security",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "^1.15.0",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "mongoose": "^5.11.14",
@@ -57,6 +58,7 @@
     "short-uuid": "^4.1.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
+    "socket.io-redis": "^6.1.1",
     "socketio-jwt": "^4.6.2",
     "tsc-watch": "^4.4.0",
     "twilio": "^3.61.0",
