--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
     "random-location": "^1.1.3",
+    "random-messages-generator": "^1.0.1",
     "rate-limit-redis": "^2.1.0",
     "redis": "^3.0.2",
     "request": "^2.88.2",
@@ -63,6 +64,7 @@
     "socketio-jwt": "^4.6.2",
     "tsc-watch": "^4.4.0",
     "twilio": "^3.61.0",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
