--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "CommonJS",
         "esModuleInterop": true,
         "target": "ES2020",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "allowSyntheticDefaultImports": true,
         "sourceMap": true,
-        "outDir": "lib"
+        "outDir": "bin"
     },
     "exclude": [
         "node_modules",
+        "bin", 
     ],
     "lib": [
         "ES2020"
