--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ahmed Baig",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.22.0",
     "@types/moment": "^2.13.0",
@@ -62,6 +62,7 @@
     "socket.io-client": "^4.1.2",
     "socket.io-redis": "^6.1.1",
     "socketio-jwt": "^4.6.2",
+    "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
     "twilio": "^3.61.0",
     "uuid": "^8.3.2",
