--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fs": "^0.0.1-security",
     "google-auth-library": "^7.0.2",
     "http": "^0.0.1-security",
+    "io": "^1.0.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "kafkajs": "^1.15.0",
@@ -58,7 +59,7 @@
     "redis": "^3.0.2",
     "request": "^2.88.2",
     "short-uuid": "^4.1.0",
-    "socket.io": "^4.1.2",
+    "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.2",
     "socket.io-redis": "^6.1.1",
     "socketio-jwt": "^4.6.2",
@@ -66,6 +67,7 @@
     "tsc-watch": "^4.4.0",
     "twilio": "^3.61.0",
     "uuid": "^8.3.2",
+    "xss": "^1.0.9",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
