--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-redis-scan": "^1.3.0",
     "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
+    "openpgp": "^5.0.0-4",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
