--- a/config/haproxy/haproxy.cfg
+++ b/config/haproxy/haproxy.cfg
@@ -1,6 +1,6 @@
 global
-        user root
-        group root
+        user haproxy
+        group haproxy
       
 
 defaults
@@ -14,15 +14,15 @@ defaults
 
 
 frontend http
-    bind *:8080
-    mode http
-    timeout client 120s
-    use_backend all
+        bind *:8080
+        mode http
+        timeout client 120s
+        use_backend all
 
 backend all
-    mode http
-    balance roundrobin
-    server s1 web_1:3001
-    server s2 web_2:3002
-    server s3 web_3:3003
-    server s4 web_4:3004
+        mode http
+        balance roundrobin
+        server s1 web_1:3001
+        server s2 web_2:3002
+        server s3 web_3:3003
+        server s4 web_4:3004
