--- a/docker-compose.kafka.yaml
+++ b/docker-compose.kafka.yaml
@@ -20,7 +20,7 @@ services:
         environment:
             KAFKA_BROKER_ID: 1
             KAFKA_ZOOKEEPER_CONNECT: zookeeper:32181
-            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092 
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://46.101.87.98:29092 
             KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     
     kafkaDashboard:
