--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/bin/www",
   "scripts": {
     "start": "set NODE_ENV=production&&tsc&&node bin/startup/www",
-    "dev": "set NODE_ENV=development&&tsc-watch --onSuccess \"nodemon ./bin/startup/www\"",
+    "dev": "set NODE_ENV=production&&tsc-watch --onSuccess \"nodemon ./bin/startup/www\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ahmed Baig",
