--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^2.22.0",
     "@types/moment": "^2.13.0",
     "@types/passport-google-oauth2": "^0.1.3",
+    "@types/socket.io": "^3.0.2",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
