--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/express": "4.16.1",
+    "@types/redis": "^2.8.32",
     "prisma": "^2.28.0",
     "tslint": "5.12.1",
     "typescript": "^4.3.5"
